--- a/app/index.html
+++ b/app/index.html
@@ -75,20 +75,26 @@
     <h1>{{breadcrumbs}}</h1> -->
       <div class="main">
         <div ng-repeat="folder in desctop | filter:{ 'type':'folder', 'parent': parent_id } track by $index"
-                ng-click='chageFolder(folder.id)'
-                class="btn_folder thumbnail" type="button">
-                <div class='name_wrapper'>
-                  <div class="name">{{folder.name}}</div>
-                  <button ng-click="consoleLog(); $event.stopPropagation();" class="btn btn-mini btn-warning" type="button"> # </button>
-                  <button ng-click="consoleLog(); $event.stopPropagation();" class="btn btn-mini btn-danger" type="button"> # </button>
-                </div>
+          ng-click='chageFolder(folder.id)'
+          class="btn_folder thumbnail" type="button">
+          <div class='name_wrapper' ng-hide='folder.editing'>
+            <div class="name">{{folder.name}}</div>
+            <div class="clear"></div>
+            <button ng-click="editFolderName(folder.id, true); $event.stopPropagation(); $event.preventDefault();" class="btn btn-mini btn-warning" type="button"> # </button>
+            <button ng-click="removeFolder(folder); $event.stopPropagation(); $event.preventDefault();" class="btn btn-mini btn-danger" type="button"> # </button>
+          </div>
+          <div ng-show='folder.editing'>
+            <input maxlength="10" type="text" ng-model="folder.name" ng-click='$event.stopPropagation(); $event.preventDefault();'>
+            <div class="clear"></div>
+            <button ng-click="editFolderName(folder.id, false); $event.stopPropagation(); $event.preventDefault();" class="btn btn-mini btn-success" type="button"> # </button>
+          </div>
         </div>
 
         <div ng-repeat="file in desctop | filter:{ 'type':'file',   'parent': parent_id } track by $index" class="span2">
           <a href="#" class="thumbnail img_in_folder">
             <img ng-src="{{file.src}}" alt="Image" />
             <div>{{ file.name }}</div>
-            <button ng-click="consoleLog(); $event.stopPropagation(); $event.preventDefault();" class="btn btn-mini btn-danger delete_img" type="button"> # </button>
+            <button ng-click="removeFile(file); $event.stopPropagation(); $event.preventDefault();" class="btn btn-mini btn-danger delete_img" type="button"> # </button>
           </a>
         </div>
       </div>
