--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="css/app.css"/>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
 </head>
-<body ng-controller="GaleryCtrl">
-  <div class="well" ng-show='loader' ng-cloak >
+<body ng-controller="GaleryCtrl" ng-cloak>
+  <div class="well" ng-show='loader'>
     <form class="form-search" ng-submit="searchPhotos()">
       <div class="input-append">
         <input type="text" class="span3 search-query" maxlength="10" ng-model='search'>
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-  <div class="well" ng-hide='loader' ng-cloak >
+  <div class="well" ng-hide='loader'>
     <form class="form-search" ng-submit="searchPhotos()">
       <div class="input-append">
         <input type="text" class="span3 search-query" maxlength="10" ng-model='search'>
@@ -84,14 +84,14 @@
             <button ng-click="removeFolder(folder); $event.stopPropagation(); $event.preventDefault();" class="btn btn-mini btn-danger" type="button"> # </button>
           </div>
           <div ng-show='folder.editing'>
-            <input maxlength="10" type="text" ng-model="folder.name" ng-click='$event.stopPropagation(); $event.preventDefault();'>
+            <input maxlength="10" type="text" ng-model="folder.name" ng-click='$event.stopPropagation(); $event.preventDefault();' todo-focus="folder.editing">
             <div class="clear"></div>
             <button ng-click="editFolderName(folder.id, false); $event.stopPropagation(); $event.preventDefault();" class="btn btn-mini btn-success" type="button"> # </button>
           </div>
         </div>
 
         <div ng-repeat="file in desctop | filter:{ 'type':'file',   'parent': parent_id } track by $index" class="span2">
-          <a href="#" class="thumbnail img_in_folder">
+          <a ng-click="showImage(file); $event.stopPropagation(); $event.preventDefault();" href="#" class="thumbnail img_in_folder">
             <img ng-src="{{file.src}}" alt="Image" />
             <div>{{ file.name }}</div>
             <button ng-click="removeFile(file); $event.stopPropagation(); $event.preventDefault();" class="btn btn-mini btn-danger delete_img" type="button"> # </button>
@@ -101,11 +101,11 @@
     </div>
   </div>
 
-  <div class="right_column">
+  <div class="right_column" ng-show='openedImage'>
     <div class="well">
       <div class="description">
-        <div class="span3"><a href="#x" class="thumbnail"><img src="http://placehold.it/250x250" alt="Image" /></a></div>
-        <div class="title">930523534.jpg</div>
+        <div class="span3"><a href="#" class="thumbnail"><img ng-src="{{openedImage.src}}" width="230px" alt="Image" /></a></div>
+        <div class="title">{{openedImage.name}}</div>
         <div class='definition'>Add date:</div>
         <div>2013-09-23 13:22:59 +0300</div>
         <button class="btn btn-large btn-block btn-primary" type="button">Download</button>
@@ -126,6 +126,7 @@
 
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/directives.js"></script>
   <script src="js/controllers.js"></script>
 </body>
 </html>
