--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,33 @@
       <button ng-click='addFolder()' class="btn btn-primary add_folder" type="button">Add folder + </button>
       <div class="clear"></div>
       <div class="main">
+
+
+        <div class="span2" ng-repeat="folder in desktop | filter:{ 'type':'folder', 'parent': parent_id } track by $index">
+          <a href="#" class="thumbnail img_in_folder">
+            <div class="folder" ng-click='chageFolder(folder)'>
+              <div class="front"></div>
+              <div class="back"></div>
+            </div>
+            <button ng-click="removeFolder(folder)" class="btn btn-mini btn-danger delete_img" type="button"> # </button>
+            <span class="name" ng-click='editFolderName(folder.id, true)' ng-hide='folder.editing'>{{folder.name}}</span>
+          
+            <div class='change_name' ng-show='folder.editing'>
+              <input maxlength="10"
+                     type="text"
+                     ng-model="folder.name"
+                     todo-focus="folder.editing"
+                     todo-blur="editFolderName(folder.id, false)"
+                     ng-keydown="checkKeyCode($event, folder.id)" >
+            </div>
+          </a>
+        </div>
+
+
+
+
+
+<!-- 
         <div ng-repeat="folder in desktop | filter:{ 'type':'folder', 'parent': parent_id } track by $index"
              ng-click='chageFolder(folder)'
              class="btn_folder thumbnail" type="button">
@@ -91,6 +118,27 @@
             <button ng-click="editFolderName(folder.id, false)" class="btn btn-mini btn-success" type="button"> # </button>
           </div>
         </div>
+ -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         <div ng-repeat="file in desktop | filter:{ 'type':'file',   'parent': parent_id } track by $index" class="span2">
           <a href="#" class="thumbnail img_in_folder">
