--- a/app/index.html
+++ b/app/index.html
@@ -92,58 +92,11 @@
           </a>
         </div>
 
-
-
-
-
-<!-- 
-        <div ng-repeat="folder in desktop | filter:{ 'type':'folder', 'parent': parent_id } track by $index"
-             ng-click='chageFolder(folder)'
-             class="btn_folder thumbnail" type="button">
-          <div class='name_wrapper' ng-hide='folder.editing'>
-            <div class="name">{{folder.name}}</div>
-            <div class="clear"></div>
-            <button ng-click="editFolderName(folder.id, true); $event.stopPropagation();" class="btn btn-mini btn-warning" type="button"> # </button>
-            <button ng-click="removeFolder(folder); $event.stopPropagation();" class="btn btn-mini btn-danger" type="button"> # </button>
-          </div>
-          <div ng-show='folder.editing'>
-            <input maxlength="10"
-                   type="text"
-                   ng-model="folder.name"
-                   ng-click='$event.stopPropagation()'
-                   todo-focus="folder.editing"
-                   todo-blur="editFolderName(folder.id, false)"
-                   ng-keydown="checkKeyCode($event, folder.id)" >
-            <div class="clear"></div>
-            <button ng-click="editFolderName(folder.id, false)" class="btn btn-mini btn-success" type="button"> # </button>
-          </div>
-        </div>
- -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <div ng-repeat="file in desktop | filter:{ 'type':'file',   'parent': parent_id } track by $index" class="span2">
           <a href="#" class="thumbnail img_in_folder">
             <img ng-src="{{file.src}}" ng-click="showImage(file)"  alt="Image" />
-            <div>{{ file.name }}</div>
+            <div class="clear"></div>
+            <span class="name" >{{ file.name }}</span>
             <button ng-click="removeFile(file)" class="btn btn-mini btn-danger delete_img" type="button"> x </button>
           </a>
         </div>
