--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap.js"></script>
 </head>
 <body ng-controller="GaleryCtrl" ng-cloak>
+<h6>{{photos}}</h6>
   <div class="well" ng-show='loader'>
     <form class="form-search" ng-submit="searchPhotos()">
       <div class="input-append">
