--- a/app/index.html
+++ b/app/index.html
@@ -18,8 +18,12 @@
         <input type="text" class="span3 search-query" maxlength="10" ng-model='search'>
         <button type="submit" class="btn btn-primary">Найти</button>
       </div>
+      <blockquote class='text_query'>
+        <small>{{text_query}}</small>
+      </blockquote>
       <img ng-show='ajax_loading' src="img/ajax_loader.gif" width="25px">
     </form>
+    <div class="clear"></div>
     <div class="carousel">
       <div class="row-fluid">
         <div ng-repeat="photo in photos" class="span3">
@@ -39,7 +43,11 @@
         <input type="text" class="span3 search-query" maxlength="10" ng-model='search'>
         <button type="submit" class="btn btn-primary">Найти</button>
       </div>
+      <blockquote class='text_query'>
+        <small>...</small>
+      </blockquote>
     </form>
+    <div class="clear"></div>
     <div class="carousel">
       <div class="row-fluid">
         <div class="span3"><a href="#" class="thumbnail"><img class='carousel_img_0' src="http://placehold.it/250x250" width='231px' alt="Image" /></a></div>
