--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/carusel_images.css">
   <link rel="stylesheet" href="css/prism.css" />
-  <link rel="stylesheet" href="css/app.css"/>
+
+  <link rel="stylesheet/less" type="text/css" href="css/app.less">
+  <script src="js/less.js" type="text/javascript"></script>
+
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap.js"></script>
 </head>
